# zipet

./: .gitignore  LICENSE  README.md  build.zig  build.zig.zon
.github/workflows/: release.yml
.zig-cache/o/a21f5a769935ca15315be2030829eda9/: zipet
ai/: README.md  mcp_config_example.json  prompts.py  pyproject.toml  safety.py  security_policy.json  server.py
docs/superpowers/plans/: 2026-03-19-workflow-features.md  2026-03-21-tui-workspace-creation.md
docs/superpowers/specs/: 2026-03-19-workflow-features-design.md  2026-03-21-tui-workspace-creation-design.md
man/man1/: zipet-pack.1  zipet-workflow.1  zipet-workspace.1  zipet.1
man/man5/: zipet-snippets.5  zipet.toml.5
packs/: devops.toml  git-power.toml  pentesting.toml  sysadmin.toml  web-dev.toml
scripts/: install-man.sh  install-packs.sh  install.sh
src/: cli.zig  community.zig  condition.zig  config.zig  dag.zig  executor.zig  fuzzy.zig  highlight.zig  history.zig  main.zig  pack.zig  store.zig  template.zig  toml.zig  tui.zig  update.zig  workflow.zig  workspace.zig
src/tui/: actions.zig  input.zig  render.zig  root.zig  types.zig  unicode.zig  utils.zig
src/tui/widgets/: form.zig  help.zig  main_screen.zig  output_view.zig  pack_browser.zig  pack_preview.zig  param_input.zig  tag_picker.zig  workflow_form.zig  workflow_runner.zig  workspace_picker.zig
