[project]
name = "zipet-mcp"
version = "0.1.0"
description = "MCP server for zipet — expose snippets, workflows & packs to AI coding agents"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "zipet"}]

dependencies = []

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
zipet-mcp = "server:main"
